--- a/css/style.css
+++ b/css/style.css
@@ -2237,11 +2237,12 @@ hamburger
 }
 .skills-section .skills .skills-items {
   display: grid;
-  gap: 5vh;
+  gap: 10vh;
 }
 @media (min-width: 768px) {
   .skills-section .skills .skills-items {
     grid-template-columns: 1fr 1fr;
+    gap: 2rem;
   }
 }
 @media (min-width: 1024px) {
