--- a/css/style.css
+++ b/css/style.css
@@ -2254,7 +2254,7 @@ hamburger
   background: #29323c;
   border-radius: 0.25rem;
   color: #fff;
-  padding: 0 0.5rem 1rem;
+  padding: 0 0.25rem 1rem 1rem;
 }
 .skills-section .skills .skills-items .skills-item .icon i {
   font-size: 2.5rem;
@@ -2268,12 +2268,16 @@ hamburger
 .skills-section .skills .skills-items .skills-item h3 {
   margin-bottom: 1rem;
 }
+.skills-section .skills .skills-items .skills-item ul {
+  padding: 0.5rem 0rem 1rem 1rem;
+}
 .skills-section .skills .skills-items .skills-item ul li {
   margin-bottom: 0.5rem;
+  line-height: 1.5;
   text-transform: capitalize;
 }
 .skills-section .skills .skills-items .skills-item ul li::marker {
-  color: #29323c;
+  color: #485563;
 }
 .skills-section .skills .io-container {
   width: 100%;
