skills-item ul fs

--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -638,6 +638,7 @@
                     padding: .5rem 0rem 1rem 1rem;
                     li {
                         margin-bottom: .5rem;
+                        font-size: 1rem;
                         line-height: 1.5;
                         text-transform: capitalize;
                         &::marker {
