--- a/css/style.css
+++ b/css/style.css
@@ -2273,6 +2273,7 @@ hamburger
 }
 .skills-section .skills .skills-items .skills-item ul li {
   margin-bottom: 0.5rem;
+  font-size: 1rem;
   line-height: 1.5;
   text-transform: capitalize;
 }
