--- a/css/style.css
+++ b/css/style.css
@@ -2863,7 +2863,6 @@ hamburger
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    align-items: flex-start;
     justify-content: space-between;
     gap: 1rem;
     border-radius: 0.25rem;
@@ -2873,6 +2872,7 @@ hamburger
   overflow: hidden;
   padding: 0 0 1rem 0;
   padding: 0;
+  border-radius: 0.25rem;
 }
 .work .work-container .item:first-child {
   margin-bottom: 15vh;
@@ -2885,6 +2885,7 @@ hamburger
 @media (min-width: 768px) {
   .work .work-container .item {
     padding: 0;
+    background: #ffff;
   }
 }
 .work .work-container .item .item-header {
@@ -2897,7 +2898,6 @@ hamburger
 }
 @media (min-width: 768px) {
   .work .work-container .item .item-header {
-    display: grid;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -2911,9 +2911,14 @@ hamburger
 .work .work-container .item .item-header .item-title {
   text-transform: capitalize;
   margin-bottom: 1rem;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 1.2rem;
   font-size: clamp(1.2rem, 2vw, 2rem);
+}
+@media (min-width: 768px) {
+  .work .work-container .item .item-header .item-title {
+    margin-bottom: 0.5rem;
+  }
 }
 .work .work-container .item .item-header .item-meta-data {
   display: flex;
