--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -20,7 +20,6 @@
                 display: flex;
                 flex-direction: row-reverse;
                 align-items: center;
-                align-items: flex-start;
                 justify-content: space-between;
                 gap: 1rem;
                 // border: 2px solid red;
@@ -35,6 +34,7 @@
             overflow: hidden;
             padding: 0 0 1rem 0;
             padding: 0;
+            border-radius: .25rem;
             &:first-child {
                 margin-bottom: 15vh;
             }
@@ -43,6 +43,8 @@
             }
             @include md {
                 padding: 0;
+                background: #ffff;
+
             }
             
             .item-header {
@@ -53,7 +55,6 @@
                     padding: 1rem;
                 }
                 @include md {
-                    display: grid;
                     display:flex;
                     flex-direction: column;
                     justify-content: space-between;
@@ -69,11 +70,11 @@
                 .item-title {
                     text-transform: capitalize;
                     margin-bottom: 1rem;
-                    font-weight: 600;
+                    font-weight: 700;
                     font-size: 1.2rem;
                     font-size: clamp(1.2rem, 2vw, 2rem);
                     @include md {
-                        // margin: 0;
+                    margin-bottom: .5rem;
                         // font-size: 1.5rem;
                     }
                 }
