--- a/css/style.css
+++ b/css/style.css
@@ -2248,7 +2248,7 @@ hamburger
   border-radius: 0.25rem;
   color: #fff;
   padding: 0 0.25rem 1rem 1rem;
-  box-shadow: 0.15rem 0.5rem 1rem rgba(255, 255, 255, 0.15);
+  box-shadow: 0.025rem 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
   transition: transform 0.5s, box-shadow 0.25s;
 }
 .skills-section .skills .skills-items .skills-item .icon {
@@ -2258,6 +2258,7 @@ hamburger
 .skills-section .skills .skills-items .skills-item .icon i {
   font-size: 2.5rem;
   color: #ddd;
+  filter: drop-shadow(0.125rem 0.5rem 0.25rem #0006);
 }
 .skills-section .skills .skills-items .skills-item .icon img, .skills-section .skills .skills-items .skills-item .icon svg {
   width: 2.5rem;
@@ -2271,7 +2272,7 @@ hamburger
 }
 .skills-section .skills .skills-items .skills-item ul li {
   margin-bottom: 0.5rem;
-  font-size: 1rem;
+  font-size: 0.95rem;
   line-height: 1.5;
   text-transform: capitalize;
 }
@@ -2285,10 +2286,13 @@ hamburger
 }
 .skills-section .skills .skills-items .skills-item:hover {
   transform: scale(0.99);
-  box-shadow: 0rem 0.25rem 0.5rem rgba(255, 255, 255, 0.2);
+  box-shadow: 0.025rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
 }
 .skills-section .skills .skills-items .skills-item:hover .icon {
   transform: translateY(-0.5rem);
+}
+.skills-section .skills .skills-items .skills-item:hover .icon i {
+  filter: drop-shadow(0rem 0.25rem 0.15rem #0008);
 }
 .skills-section .skills .io-container {
   width: 100%;
