--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -615,7 +615,7 @@
                 border-radius: $border-radius-sm;
                 color: #fff;
                 padding: 0 .25rem 1rem 1rem;
-                box-shadow: .15rem .5rem 1rem hsla(0, 0%, 100%, .15);
+                box-shadow: .025rem .5rem .8rem hsla(0, 0%, 0%, .2);
                 transition: transform .5s, box-shadow .25s;
                 .icon {
                     transform: translateY(-1rem);
@@ -623,6 +623,7 @@
                     i {
                         font-size: 2.5rem;
                         color: #ddd;
+                        filter: drop-shadow(.125rem .5rem .25rem #0006);
                         // margin-top: -1rem;
                         // margin: -1rem 0 1rem;
                     }
@@ -643,7 +644,7 @@
                     padding: .5rem 0rem 1rem 1rem;
                     li {
                         margin-bottom: .5rem;
-                        font-size: 1rem;
+                        font-size: .95rem;
                         line-height: 1.5;
                         text-transform: capitalize;
                         &::marker {
@@ -657,9 +658,12 @@
 
                 &:hover {
                     transform: scale(.99);
-                    box-shadow: 0rem .25rem .5rem hsla(0, 0%, 100%, .2);
+                    box-shadow: .025rem .5rem .5rem hsla(0, 0%, 0%, .3);
                     .icon {
                         transform: translateY(-.5rem);
+                        i {
+                            filter: drop-shadow(0rem .25rem .15rem #0008);
+                        }
                     }
                 }
             }
