--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -54,7 +54,7 @@
             opacity: 1;
             background: $overlay-blue-darkest;
             box-shadow: .015rem .015rem .5rem rgba(41, 50, 60, .2),
-                    .25rem .25rem 1rem rgba(0, 0, 0, .05);
+                    0rem .25rem .5rem rgba(0, 0, 0, .2);
         }
         @media (min-width: 1024px) {
             height: 8vh;
