--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -624,6 +624,7 @@
                         font-size: 2.5rem;
                         color: #ddd;
                         filter: drop-shadow(.125rem .5rem .25rem #0006);
+                        transition: .25s;
                         // margin-top: -1rem;
                         // margin: -1rem 0 1rem;
                     }
