--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -84,10 +84,12 @@ $background-valid: #cdf7d3c7;
 $text-valid: #000;
 
 
-// box-shadows
+// BOX SHADOWS
+$box-shadow-item-sm: .125rem .25rem .25rem #0002;
+$box-shadow-item-md: 0rem .5rem 1rem #0001;
 $box-light-top-sm: inset 2px 2px 3px rgba(225, 225, 225, .1),
                     inset -2px -2px 3px rgba(0, 0, 0, .150),
-                    .25rem .25rem .5rem rgba(0, 0, 0, .150);
+                    .025rem .25rem .5rem rgba(0, 0, 0, .150);
 
 $box-light-top-sm-hover: inset 2px 2px 3px rgba(0, 0, 0, .250),
                     inset -2px -2px 3px rgba(225, 225, 225, 0.2),
