--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -10,7 +10,7 @@ form {
     height: auto;
     display: flex;
     flex-direction: column;
-    margin: 5vh auto 0;
+    margin: 10vh auto 5vh;
     padding: 10vh 5vw;
     border-radius: 0;
     // border: 1px solid $span-gold;
