--- a/css/style.css
+++ b/css/style.css
@@ -4189,7 +4189,7 @@ form {
   height: auto;
   display: flex;
   flex-direction: column;
-  margin: 5vh auto 0;
+  margin: 10vh auto 5vh;
   padding: 10vh 5vw;
   border-radius: 0;
   overflow: hidden;
