--- a/css/style.css
+++ b/css/style.css
@@ -1914,22 +1914,19 @@ hamburger
   transform: scale(1) translateY(0);
 }
 .skills-section .skills .dropdown .dropbtn {
-  padding: 0.5rem 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0.5rem 1rem;
   margin: 2.5vh 5vw;
-  width: 25vw;
-  width: 20rem;
-  width: 15rem;
-  width: clamp(10rem, 25vw, 20rem);
-  background: #000a;
+  width: 11rem;
+  width: clamp(10rem, 20vw, 12rem);
+  background: #dc143c;
   color: #f4f4f4;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-size: clamp(1.1rem, 2.5vw, 1.25rem);
   font-weight: 400;
   text-transform: capitalize;
-  letter-spacing: 0.025rem;
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -1937,12 +1934,6 @@ hamburger
   font-family: "Kanit", sans-serif;
   position: relative;
   isolation: isolate;
-}
-@media (min-width: 768px) {
-  .skills-section .skills .dropdown .dropbtn {
-    justify-content: center;
-    padding: 0.5rem 2rem;
-  }
 }
 .skills-section .skills .dropdown .dropbtn i {
   font-weight: 800;
@@ -1974,7 +1965,7 @@ hamburger
 }
 .skills-section .skills .dropdown .dropbtn.active {
   transform: scale(0.98);
-  letter-spacing: normal;
+  color: #bfbfbf;
 }
 .skills-section .skills .dropdown .dropbtn.active i {
   color: #f4f4f4;
@@ -1987,9 +1978,6 @@ hamburger
   opacity: 1;
 }
 @media (min-width: 768px) {
-  .skills-section .skills .dropdown .dropbtn:hover {
-    color: #bfbfbf;
-  }
   .skills-section .skills .dropdown .dropbtn:hover::before {
     opacity: 0;
   }
