--- a/css/style.css
+++ b/css/style.css
@@ -3071,10 +3071,15 @@ hamburger
   height: 50%;
   object-fit: cover;
   transition: 0.5s;
-  border-radius: 0.25rem;
+}
+@media (min-width: 820px) {
+  .work .work-container .item .item-content .item-image img {
+    border-radius: 0.25rem;
+  }
 }
 .work .work-container .item .item-content .item-image:hover img {
   transform: scale(1.1);
+  transition: 2s;
 }
 @media (max-width: 820px) {
   .work .work-container .item.io-item {
