--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -327,7 +327,7 @@
             width: 100%;
             height: 70vh;
             position: sticky;
-            top: 10vh;
+            top: 15vh;
             // border: 2px solid blue;
         }
         // about images
@@ -341,7 +341,7 @@
             transition: .5s ease;
             transform: preserve-3d;
             cursor: pointer;
-            overflow: hidden;
+            // overflow: hidden;
 
             img {
                 display: none;
@@ -358,7 +358,7 @@
                 font-weight: 500;
                 font-style: italic;
                 padding: .3em;
-                border-radius: 10px;
+                border-radius: .5rem;
                 transition: 1s ease;
                 background-repeat: no-repeat;
                 background-size: cover;
